# PUC-Rio

./: .cproject  .gitignore  .nedfolders  .oppfeatures  .project  AQUAD.cbp  CMakeLists.txt  LICENSE  README.md  aquad1  aquad1.c  aquad2  aquad2.c  aquad3  aquad3-version2  aquad3.c  ast.c  ast.h  author-mpi  author-pthreads  benchmark.sh  cluster-results  do.sh  do.sh~  lex.yy.c~  lex.yy.h  llvm.c  main.c  main.c~  monga.h~  monga.lex  monga.lex~  monga.y  playground.hs  prog1.c~  prog2.c~  prog3.c~  prog4.c~  regular-expressions.hs  runs-aquad1 and aquad2.txt  (+5 more)
.metadata/: version.ini
1411029-1412122/: .project
CubicSpline/: CubicSpline.sln  pontos.csv
Examples/: 1.ll  1.monga  1.monga.gab  10.notmonga  2.notmonga  9.notmonga  T1_malformedString.gab  T1_malformedString.monga
INF1011-Semantics/: simple-imperative-language.hs
INF1337-T1/: defaultMap.mapsave
INF1337-T2/: defaultMap.mapsave
INF1715-Compilers/: Monga.txt  ast.h  llvm.c  llvm.h
INF1761-Computer-Graphics/: .gitignore
INF1771-Artificial-Intelligence/: README.md
INF1771-T1/: defaultMap.mapsave
INF1771-T3/: test1.arff  test2.arff  wfg_output.txt
INF1771-T4/: main.java
INF2056-Distributed-Algorithms/: build.gradle
INF2591-Concurrent-And-Parallel-Programming/T1-Limited-Buffer/: CMakeLists.txt  lbuf
INF3000-MSCDISS/: .cproject  README.md  Version
Lab 0/: main.c
Lab 1/: fcos.c  fcos.h  inf1608_lab1.sln  teste.c
Lab 10/: 200 - Superamortecido.xlsx  40 - Criticamente Amortecido.xlsx
Lab 2/: inf1608_lab2.sln
Lab 3/: Lab 3.sln
Lab 5/: Lab 5.sln
Lab 7/: Lab 7.sln
T1/: hellomake  (+6 more)
(+2668 files in other folders)
